@@ -1,3 +1,9 @@
+2007-07-25  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-util.c: (panel_util_set_tooltip_text): remove old signal
+	handler for query-tooltip when setting a new tooltip
+	Fix bug #459973. Patch by Matthias Clasen <mclasen@redhat.com>
+
 2007-07-16  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-profile.c: (panel_profile_load_toplevel): really look at the
